loopdowhile.Poucet2.scala.error
Compilation error:
Poucet2:6: error: '(' expected but identifier found.
 if baggles < 3 {right()}
    ^Poucet2:8: error: illegal start of simple expression
}
^